Improve accessiblity add label to mailchimp input field, update read me and add models.png ERD

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,6 +47,8 @@
                       target="_blank"
                       novalidate>
                   <div id="mc_embed_signup_scroll" class="input-group input-group-lg">
+                    <!-- Label for accessibility -->
+                    <label for="mce-EMAIL" class="sr-only">Email address</label>
                     <input type="email"
                           name="EMAIL"
                           class="required email form-control flex-grow-1 mb-2 mb-sm-0"
