--- a/templates/base.html
+++ b/templates/base.html
@@ -94,7 +94,7 @@
                   class="text-white mx-2">
                   Privacy Policy
                 </a>
-                <a href="{% url 'contact_us' %}"
+                <a href="{% url 'core:contact_us' %}"
                   class="text-white mx-2"
                   aria-label="Contact us for enquiries">
                   Contact Us
