Fix type of crispy in settings and fix default img path in bag.html

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -33,7 +33,7 @@
                                         >
                                     {% else %}
                                         <img 
-                                        src="{% static 'images/default-product.png' %}" 
+                                        src="{% static 'products/default-product.png' %}" 
                                         alt="No image available" 
                                         class="img-fluid rounded" 
                                         style="max-width:100px;"
