--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -26,7 +26,7 @@
                                  <td class="text-center">
                                     {% if item.product.image %}
                                         <img 
-                                        src="{{ item.product.image.url }}" 
+                                        src="{% static 'products/'|add:item.product.slug|add:'.webp' %}"
                                         alt="{{ item.product.name }}" 
                                         class="img-fluid rounded" 
                                         style="max-width:100px;"
