Remove table width 100% to fix validation error in bag.html

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -8,7 +8,7 @@
     <div class="bag-items">
             {% if bag_items %}
             <div class="table-responsive">
-                <table class="table table-bordered table-striped table-light align-middle" width="100%">
+                <table class="table table-bordered table-striped table-light align-middle">
                     <thead class="thead-dark">
                         <tr>
                             <th scope="col">Product</th>
