--- a/templates/404.html
+++ b/templates/404.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="container text-center mt-5">
     <h1 class="display-4">404 - Page Not Found</h1>
-    <img src="{% static 'images/500-server-error.png' %}" alt="Server Error" class="img-fluid hurleys-shop">
+    <!-- <img src="{% static 'images/500-server-error.png' %}" alt="Server Error" class="img-fluid hurleys-shop"> -->
     <p class="lead">Oops! You knocked that one out of the park!</p>
     <a href="/" class="btn btn-primary">Let's find ourselves a new hurley HERE!</a>
 
