Comment out 404 links to debug

--- a/templates/404.html
+++ b/templates/404.html
@@ -11,12 +11,12 @@
     <p class="lead">Oops! You knocked that one out of the park!</p>
     <a href="/" class="btn btn-primary">Let's find ourselves a new hurley HERE!</a>
 
-    <div class="mt-4">
+    <!-- <div class="mt-4">
         <p>Or check out our popular categories:</p>
         <a href="/hurleys/" class="btn btn-outline-primary mx-2">Hurleys</a>
         <a href="/helmets/" class="btn btn-outline-primary mx-2">Helmets</a>
         <a href="/grips/" class="btn btn-outline-primary mx-2">Grips</a>
-    </div>
+    </div> -->
 
     <form action="/search/" method="get" class="mt-4">
         <input type="text" name="q" class="form-control" placeholder="Search for products..." required>
