--- a/templates/500.html
+++ b/templates/500.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container text-center mt-5">
     <h1 class="display-4">500 Error - Internal Server Error</h1>
-    <img src="{% static 'images/500-server-error.png' %}" alt="Server Error" class="img-fluid hurleys-shop">
+    <!-- <img src="{% static 'images/500-server-error.png' %}" alt="Server Error" class="img-fluid hurleys-shop"> -->
     <p class="lead">Oops! Something went wrong!</p>
     <a href="/" class="btn btn-primary">Let's try again here</a>
 </div>
