--- a/templates/404.html
+++ b/templates/404.html
@@ -1,3 +1,4 @@
+{% load static %}
 {% extends 'base.html' %}
 
 {% block extra_head %}
@@ -7,16 +8,16 @@
 {% block content %}
 <div class="container text-center mt-5">
     <h1 class="display-4">404 - Page Not Found</h1>
-    <!-- <img src="{% static 'images/500-server-error.png' %}" alt="Server Error" class="img-fluid hurleys-shop"> -->
+    <img src="{% static 'images/500-server-error.png' %}" alt="Server Error" class="img-fluid hurleys-shop">
     <p class="lead">Oops! You knocked that one out of the park!</p>
     <a href="/" class="btn btn-primary">Let's find ourselves a new hurley HERE!</a>
 
-    <!-- <div class="mt-4">
+    <div class="mt-4">
         <p>Or check out our popular categories:</p>
         <a href="/hurleys/" class="btn btn-outline-primary mx-2">Hurleys</a>
         <a href="/helmets/" class="btn btn-outline-primary mx-2">Helmets</a>
         <a href="/grips/" class="btn btn-outline-primary mx-2">Grips</a>
-    </div> -->
+    </div>
 
     <form action="/search/" method="get" class="mt-4">
         <input type="text" name="q" class="form-control" placeholder="Search for products..." required>
