--- a/templates/404.html
+++ b/templates/404.html
@@ -1,11 +1,12 @@
 {% load static %}
-{% extends 'base.html' %}
-
-{% block content %}
-<div class="container text-center mt-5">
-    <h1 class="display-4">404 - Page Not Found</h1>
-    <img src="{% static 'images/500-server-error.png' %}" alt="Server Error" class="img-fluid hurleys-shop">
-    <p class="lead">Oops! You knocked that one out of the park!</p>
-    <a href="/" class="btn btn-primary">Let's find ourselves a new hurley HERE!</a>
-</div>
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Page Not Found</title>
+</head>
+<body>
+  <h1>404 - Page Not Found</h1>
+  <p>The page you’re looking for does not exist.</p>
+</body>
+</html>
