--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <meta name="description" content="{% block meta_description %}Welcome to GAA Store, your one-stop shop for all GAA and Camogie gear, including hurleys, how to measure for hurleys, accessories, and more!{% endblock %}">
     <meta name="keywords" content="{% block meta_keywords %}GAA, Camogie, Hurleys, Accessories, Sports Gear, How to Measure{% endblock %}" >
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" >
+    <meta name="google-site-verification" content="bq32t-1J-8K0sz8bfvtdL1Dpm4fK9brziphxaDTpiWQ" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" >
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" >
     <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css" >
