--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -52,23 +52,28 @@
     </div>
 
     <!-- Navigation Options -->
-    <div id="thank-you-nav" class="mt-5">
-        <a
-            href="{% url 'home' %}"
-            class="btn btn-outline-light btn-lg rounded-0"
-        >
-            <i class="fas fa-home" aria-hidden="true"></i>
-            <span class="sr-only">Return to Homepage</span>
-            Return to Homepage
-        </a>
-        <a
-            href="{% url 'products:product_list' %}"
-            class="btn btn-outline-light btn-lg rounded-0"
-        >
-            <i class="fas fa-shopping-bag" aria-hidden="true"></i>
-            <span class="sr-only">Continue Shopping</span>
-            Continue Shopping
-        </a>
+     <div class="row">
+        <div class="col text-center">
+            <div id="thank-you-nav" class="d-inline-flex gap-3">
+                <a
+                href="{% url 'home' %}"
+                class="btn btn-outline-light btn-lg rounded-0"
+            >
+                <i class="fas fa-home" aria-hidden="true"></i>
+                <span class="sr-only">Return to Homepage</span>
+                Return to Homepage
+            </a>
+            <a
+                href="{% url 'products:product_list' %}"
+                class="btn btn-outline-light btn-lg rounded-0"
+            >
+                <i class="fas fa-shopping-bag" aria-hidden="true"></i>
+                <span class="sr-only">Continue Shopping</span>
+                Continue Shopping
+            </a>
+            </div>
+        </div>
     </div>
+
 </div>
 {% endblock %}
